--- a/example/android/capacitor.settings.gradle
+++ b/example/android/capacitor.settings.gradle
@@ -15,4 +15,10 @@ include ':capacitor-storage'
 project(':capacitor-storage').projectDir = new File('../node_modules/@capacitor/storage/android')
 
 include ':transistorsoft-capacitor-background-fetch'
-project(':transistorsoft-capacitor-background-fetch').projectDir = new File('../../android')
+project(':transistorsoft-capacitor-background-fetch').projectDir = new File('../node_modules/@transistorsoft/capacitor-background-fetch/android')
+
+include ':transistorsoft-capacitor-background-geolocation'
+project(':transistorsoft-capacitor-background-geolocation').projectDir = new File('../../../capacitor-background-geolocation/android')
+
+include ':transistorsoft-capacitor-background-geolocation-firebase'
+project(':transistorsoft-capacitor-background-geolocation-firebase').projectDir = new File('../../android')
