--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'com.android.application'
 
+Project background_geolocation = project(':transistorsoft-capacitor-background-geolocation')
+apply from: "${background_geolocation.projectDir}/app.gradle"
+
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.transistorsoft.backgroundfetch.capacitor.demo"
+        applicationId "com.transistorsoft.firebase.capacitor.demo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -19,6 +23,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles "${background_geolocation.projectDir}/proguard-rules.pro"
         }
     }
 }
@@ -39,6 +44,7 @@ dependencies {
     implementation project(':capacitor-cordova-android-plugins')
 }
 
+apply plugin: 'com.google.gms.google-services'
 apply from: 'capacitor.build.gradle'
 
 try {
