--- a/example/android/app/capacitor.build.gradle
+++ b/example/android/app/capacitor.build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation project(':capacitor-keyboard')
     implementation project(':capacitor-storage')
     implementation project(':transistorsoft-capacitor-background-fetch')
+    implementation project(':transistorsoft-capacitor-background-geolocation')
+    implementation project(':transistorsoft-capacitor-background-geolocation-firebase')
 
 }
 
