--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath 'com.google.gms:google-services:4.3.5'
+        classpath 'com.google.gms:google-services:4.3.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,7 +22,13 @@ allprojects {
         google()
         jcenter()
         maven {
+            url("${project(':transistorsoft-capacitor-background-geolocation').projectDir}/libs")
+        }
+        maven {
           url("${project(':transistorsoft-capacitor-background-fetch').projectDir}/libs")
+        }
+        maven {
+            url("${project(':transistorsoft-capacitor-background-geolocation-firebase').projectDir}/libs")
         }
     }
 }
