--- a/example/ios/App/App/capacitor.config.json
+++ b/example/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "com.transistorsoft.backgroundfetch.capacitor.demo",
-	"appName": "BGFetch Demo",
+	"appId": "com.transistorsoft.firebase.capacitor.demo",
+	"appName": "BGFirebase Demo",
 	"webDir": "www",
 	"bundledWebRuntime": false
 }
