--- a/example/ios/App/Podfile
+++ b/example/ios/App/Podfile
@@ -13,7 +13,9 @@ def capacitor_pods
   pod 'CapacitorHaptics', :path => '../../node_modules/@capacitor/haptics'
   pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
   pod 'CapacitorStorage', :path => '../../node_modules/@capacitor/storage'
-  pod 'TransistorsoftCapacitorBackgroundFetch', :path => '../../..'
+  pod 'TransistorsoftCapacitorBackgroundFetch', :path => '../../node_modules/@transistorsoft/capacitor-background-fetch'
+  pod 'TransistorsoftCapacitorBackgroundGeolocation', :path => '../../../../capacitor-background-geolocation'
+  pod 'TransistorsoftCapacitorBackgroundGeolocationFirebase', :path => '../../..'
 end
 
 target 'App' do
