--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bg-fetch-demo",
+  "name": "bg-firebase-demo",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -27,7 +27,9 @@
     "@capacitor/keyboard": "1.0.0",
     "@capacitor/storage": "^1.0.0",
     "@ionic/angular": "^5.5.2",
-    "@transistorsoft/capacitor-background-fetch": "file:..",
+    "@transistorsoft/capacitor-background-fetch": "^0.0.6",
+    "@transistorsoft/capacitor-background-geolocation": "^4.3.0",
+    "@transistorsoft/capacitor-background-geolocation-firebase": "file:..",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -44,8 +46,6 @@
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.0.0",
     "@ionic/angular-toolkit": "^4.0.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
@@ -53,14 +53,10 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
