--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,14 +18,15 @@ buildscript {
 apply plugin: 'com.android.library'
 
 def DEFAULT_COMPILE_SDK_VERSION         = 30
-def DEFAULT_FIREBASE_CORE_VERSION       = "19.0.1"
-def DEFAULT_FIREBASE_FIRESTORE_VERSION  = "23.0.3"
+def DEFAULT_FIREBASE_CORE_VERSION       = "21.1.1"
+def DEFAULT_FIREBASE_FIRESTORE_VERSION  = "24.8.1"
 
 def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
 }
 
 android {
+    namespace "com.transistorsoft.bggeo.firebase.capacitor"
     compileSdkVersion project.hasProperty('compileSdkVersion') ? rootProject.ext.compileSdkVersion : 30
     defaultConfig {
         minSdkVersion project.hasProperty('minSdkVersion') ? rootProject.ext.minSdkVersion : 21
