--- a/example/android/variables.gradle
+++ b/example/android/variables.gradle
@@ -1,17 +1,22 @@
 ext {
-    minSdkVersion = 21
-    compileSdkVersion = 30
-    targetSdkVersion = 30
-    androidxActivityVersion = '1.2.0'
-    androidxAppCompatVersion = '1.2.0'
-    androidxCoordinatorLayoutVersion = '1.1.0'
-    androidxCoreVersion = '1.3.2'
-    androidxFragmentVersion = '1.3.0'
-    junitVersion = '4.13.1'
-    androidxJunitVersion = '1.1.2'
-    androidxEspressoCoreVersion = '3.3.0'
-    cordovaAndroidVersion = '7.0.0'
-    googlePlayServicesLocationVersion = '18.0.0'
-    firebaseCoreVersion = "19.0.1"          // Or latest
-    firebaseFirestoreVersion = "23.0.3"
+    minSdkVersion = 22
+    compileSdkVersion = 33
+    targetSdkVersion = 33
+    androidxActivityVersion = '1.7.0'
+    androidxAppCompatVersion = '1.6.1'
+    androidxCoordinatorLayoutVersion = '1.2.0'
+    androidxCoreVersion = '1.10.0'
+    androidxFragmentVersion = '1.5.6'
+    junitVersion = '4.13.2'
+    androidxJunitVersion = '1.1.5'
+    androidxEspressoCoreVersion = '3.5.1'
+    cordovaAndroidVersion = '10.1.1'
+    playServicesLocationVersion = '21.0.1'
+    hmsLocationVersion = "6.9.0.300"
+    coreSplashScreenVersion = '1.0.0'
+    androidxWebkitVersion = '1.6.1'
+
+    googlePlayServicesLocationVersion = '21.0.1'
+    firebaseCoreVersion = "21.1.1"          // Or latest
+    firebaseFirestoreVersion = "24.8.1"
 }
