--- a/example/package.json
+++ b/example/package.json
@@ -13,53 +13,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~12.0.1",
-    "@angular/core": "~12.0.1",
-    "@angular/forms": "~12.0.1",
-    "@angular/platform-browser": "~12.0.1",
-    "@angular/platform-browser-dynamic": "~12.0.1",
-    "@angular/router": "~12.0.1",
-    "@capacitor/android": "3.0.0",
-    "@capacitor/app": "1.0.0",
-    "@capacitor/core": "3.0.0",
-    "@capacitor/haptics": "1.0.0",
-    "@capacitor/ios": "3.0.0",
-    "@capacitor/keyboard": "1.0.0",
-    "@capacitor/storage": "^1.0.0",
-    "@ionic/angular": "^5.5.2",
-    "@transistorsoft/capacitor-background-fetch": "^0.0.6",
-    "@transistorsoft/capacitor-background-geolocation": "^4.3.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",    
+    "@capacitor/android": "5.4.0",
+    "@capacitor/app": "5.0.6",
+    "@capacitor/core": "5.4.0",
+    "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.4.0",
+    "@capacitor/keyboard": "5.0.6",
+    "@capacitor/preferences": "^5.0.6",
+    "@ionic/angular": "^7.0.0",
+    "@transistorsoft/capacitor-background-fetch": "^5.1.1",
+    "@transistorsoft/capacitor-background-geolocation": "^5.2.1",
     "@transistorsoft/capacitor-background-geolocation-firebase": "file:..",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.1",
-    "@angular-eslint/builder": "~12.0.0",
-    "@angular-eslint/eslint-plugin": "~12.0.0",
-    "@angular-eslint/eslint-plugin-template": "~12.0.0",
-    "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "~12.0.1",
-    "@angular/compiler": "~12.0.1",
-    "@angular/compiler-cli": "~12.0.1",
-    "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.0.0",
-    "@ionic/angular-toolkit": "^4.0.0",
+    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular-eslint/builder": "^16.0.0",
+    "@angular-eslint/eslint-plugin": "^16.0.0",
+    "@angular-eslint/eslint-plugin-template": "^16.0.0",
+    "@angular-eslint/schematics": "^16.0.0",
+    "@angular-eslint/template-parser": "^16.0.0",
+    "@angular/cli": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
+    "@angular/language-service": "^16.0.0",
+    "@capacitor/cli": "5.4.0",
+    "@ionic/angular-toolkit": "^9.0.0",
+    "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "eslint": "^7.26.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "jasmine-core": "~4.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.2.4"
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-node": "^8.3.0",
+    "typescript": "~5.0.2"
   },
   "description": "An Ionic project"
 }
