[RELEASE] 1.1.0.  Update to latest Firebase/Firestore dependencies for both iOS and Android

--- a/example/ios/App/App/capacitor.config.json
+++ b/example/ios/App/App/capacitor.config.json
@@ -2,5 +2,14 @@
 	"appId": "com.transistorsoft.firebase.capacitor.demo",
 	"appName": "BGFirebase Demo",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"packageClassList": [
+		"AppPlugin",
+		"HapticsPlugin",
+		"KeyboardPlugin",
+		"PreferencesPlugin",
+		"BackgroundFetchModule",
+		"BackgroundGeolocationModule",
+		"BackgroundGeolocationFirebaseModule"
+	]
 }
