--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,21 +5,18 @@ ext {
     androidxEspressoCoreVersion = project.hasProperty('androidxEspressoCoreVersion') ? rootProject.ext.androidxEspressoCoreVersion : '3.3.0'
 }
 
-buildscript {
+rootProject.allprojects {
     repositories {
         google()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0'
+        mavenCentral()
     }
 }
 
 apply plugin: 'com.android.library'
 
-def DEFAULT_COMPILE_SDK_VERSION         = 30
-def DEFAULT_FIREBASE_CORE_VERSION       = "21.1.1"
-def DEFAULT_FIREBASE_FIRESTORE_VERSION  = "24.8.1"
+def DEFAULT_COMPILE_SDK_VERSION         = 34
+def DEFAULT_FIREBASE_SDK_VERSION        = "33.4.0"
+def DEFAULT_EVENTBUS_VERSION            = "3.3.1"
 
 def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
@@ -27,10 +24,10 @@ def safeExtGet(prop, fallback) {
 
 android {
     namespace "com.transistorsoft.bggeo.firebase.capacitor"
-    compileSdkVersion project.hasProperty('compileSdkVersion') ? rootProject.ext.compileSdkVersion : 30
+    compileSdkVersion project.hasProperty('compileSdkVersion') ? rootProject.ext.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
     defaultConfig {
         minSdkVersion project.hasProperty('minSdkVersion') ? rootProject.ext.minSdkVersion : 21
-        targetSdkVersion project.hasProperty('targetSdkVersion') ? rootProject.ext.targetSdkVersion : 30
+        targetSdkVersion project.hasProperty('targetSdkVersion') ? rootProject.ext.targetSdkVersion : DEFAULT_COMPILE_SDK_VERSION
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -50,24 +47,23 @@ android {
     }
 }
 
-repositories {
-    google()
-    jcenter()
-    mavenCentral()
+repositories {    
     maven {
         url './libs'
     }
 }
 
 dependencies {
-    def firebaseCoreVersion = safeExtGet('firebaseCoreVersion', DEFAULT_FIREBASE_CORE_VERSION)
-    def firebaseFirestoreVersion = safeExtGet('firebaseFirestoreVersion', DEFAULT_FIREBASE_FIRESTORE_VERSION)
+    def firebaseSDKVersion = safeExtGet("FirebaseSDKVersion", DEFAULT_FIREBASE_SDK_VERSION);
+    def eventBusVersion = safeExtGet('eventBusVersion', DEFAULT_EVENTBUS_VERSION)
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
-    implementation 'org.greenrobot:eventbus:3.2.0'
-    implementation "com.google.firebase:firebase-core:$firebaseCoreVersion"
-    implementation "com.google.firebase:firebase-firestore:$firebaseFirestoreVersion"
+    
+    implementation "org.greenrobot:eventbus:$eventBusVersion"
+
+    implementation(platform("com.google.firebase:firebase-bom:$firebaseSDKVersion"))
+    implementation "com.google.firebase:firebase-firestore"
 
     api(group: 'com.transistorsoft', name:'tsfirebaseproxy', version: '+')
     testImplementation "junit:junit:$junitVersion"
