--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -6,7 +6,7 @@ apply from: "${background_geolocation.projectDir}/app.gradle"
 
 android {
     namespace "com.transistorsoft.firebase.capacitor"
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "com.transistorsoft.firebase.capacitor.demo"
         minSdkVersion rootProject.ext.minSdkVersion
