--- a/example/package.json
+++ b/example/package.json
@@ -19,17 +19,17 @@
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",    
-    "@capacitor/android": "5.4.0",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.4.0",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "5.4.0",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/preferences": "^5.0.6",
+    "@angular/router": "^16.0.0",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/preferences": "^6.0.0",
     "@ionic/angular": "^7.0.0",
-    "@transistorsoft/capacitor-background-fetch": "^5.1.1",
-    "@transistorsoft/capacitor-background-geolocation": "^5.2.1",
+    "@transistorsoft/capacitor-background-fetch": "^6.0.1",
+    "@transistorsoft/capacitor-background-geolocation": "^6.1.2",
     "@transistorsoft/capacitor-background-geolocation-firebase": "file:..",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -45,7 +45,7 @@
     "@angular/cli": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.4.0",
+    "@capacitor/cli": "^6.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
